# iqs-application-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main_gearbox.cpp
